# pySoMQ

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
pysomq/: __init__.py  __main__.py  _utility.py  serial_client.py  serial_server.py
src/pysomq/: __init__.py  __main__.py  _utility.py  serial_client.py  serial_server.py
testing/: test_serial_client.py  test_serial_server.py
tests/: DummySerial.py  _utility.py  conftest.py  test_argsparsing.py  test_serial_client.py  test_serial_server.py
unittests/: DummySerial.py  test_serial_client.py  test_serial_server.py
