[metadata]
name = pysomq
description = Provide a bidirectional connection to a serial interface via zeroMQ
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility, serial, zeroMQ

author = Carsten Sauerbrey
author_email = carsten.sauerbrey@gmail.com
maintainer = Carsten Sauerbrey
maintainer_email = carsten.sauerbrey@gmail.com

url = https://github.com/casabre/pySoMQ

license = MIT

platform = 
    Unix
    Linux
    Windows

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = 
    pyzmq>=18.1.0
    pyserial>=3.4
    importlib-metadata; python_version<"3.8"
use_scm_version=True
setup_requires =
    setuptools_scm

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
test =
    pytest
    coverage[toml]
    pytest-cov
